--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,39 @@
-plugins {
-    id 'java'
-    id 'org.jetbrains.kotlin.jvm'
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.novoda:bintray-release:0.9'
+    }
 }
 
+plugins {
+    id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.11'
+}
+
+apply plugin: 'com.novoda.bintray-release'
+
 group 'at.wavywalk.simpler.orm'
-version '1.0-SNAPSHOT'
+version '0.1.0'
 
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+}
+
+task sourcesJar(type: Jar, dependsOn: project.classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+//
+//task javadocJar(type: Jar, dependsOn: project.javadoc) {
+//    from javadoc.destinationDir
+//}
+//
+artifacts {
+    archives sourcesJar
 }
 
 dependencies {
@@ -18,11 +42,18 @@ dependencies {
     compile "org.jooq:jooq:3.11.0"
     compile "org.jooq:jooq-codegen:3.11.0"
     compile "org.jooq:jooq-meta:3.11.0"
-
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
     compile group: 'org.freemarker', name: 'freemarker', version: '2.3.26-incubating'
+}
 
-    
+publish {
+    userOrg = 'wavywalk'
+    groupId = 'at.wavywalk.simpler'
+    repoName = 'maven'
+    artifactId = 'simpler-orm'
+    publishVersion = '0.1.0'
+    desc = 'an orm'
+    repository = "https://github.com/WavyWalk/simpler-orm"
 }
 
 compileKotlin {
