--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,13 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.novoda:bintray-release:0.9'
+        classpath 'com.novoda:bintray-release:0.9.2'
     }
 }
 
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.11'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
 
 apply plugin: 'com.novoda.bintray-release'
@@ -17,7 +17,6 @@ apply plugin: 'com.novoda.bintray-release'
 group 'at.wavywalk.simpler.orm'
 version '0.1.0'
 
-sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -39,11 +38,11 @@ artifacts {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile "org.jooq:jooq:3.11.0"
-    compile "org.jooq:jooq-codegen:3.11.0"
-    compile "org.jooq:jooq-meta:3.11.0"
-    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
-    compile group: 'org.freemarker', name: 'freemarker', version: '2.3.26-incubating'
+    compile "org.jooq:jooq:3.12.0"
+    compile "org.jooq:jooq-codegen:3.12.0"
+    compile "org.jooq:jooq-meta:3.12.0"
+    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4'
+    compile group: 'org.freemarker', name: 'freemarker', version: '2.3.29'
 }
 
 publish {
